Closed
Bug 144442
Opened 23 years ago
Closed 23 years ago
Cannot Load TDWaterhouse webbanking login page
Categories
(SeaMonkey :: General, defect, P2)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: sjbehr, Assigned: darin.moz)
References
()
Details
(Whiteboard: [pipelining][adt2 RTM])
Attachments
(1 file)
|
6.35 KB,
patch
|
gagan
:
review+
rpotts
:
superreview+
jud
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.0rc2)
Gecko/20020510
BuildID: 2002051006
Running Mozilla 1.0RC2 (Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US;
rv:1.0rc2) Gecko/20020510) on a Windows 2000 machine. Any attempt to load the
URL https://webbanking.waterhousebank.com/ results in the page mostly loading
but never finishes. The submit and cancel button images never load and the page
never gets to a point where it can receive input. Works fine with Mozilla
1.0RC1 and previous and I verified the URL works with Internet Explorer just to
be sure it wasn't a site issue. Unable to test on other operating systems.
Turning off pipelining results in the page not loading at all, simply getting an
empty browser window.
Netcraft indicates it is a Microsoft IIS based site.
Reproducible: Always
Steps to Reproduce:
1. Go to https://webbanking.waterhousebank.com/
2. Page should not load completely
Actual Results: If pipelining is turned on, page will mostly load, except for
images of submit and cancel buttons. Entering any account info (validity
irrelevant) does not work. If pipelining is turned off, page simply does not
load, leaving a white browser window. Note that it never times out or stops, it
simply never finishes loading.
Expected Results: Simply loaded the page.
Worked fine with Mozilla 1.0RC1 and previous versions both on Windows and IRIX.
Updated•23 years ago
|
Comment 1•23 years ago
|
||
wfm with win2k build 20020513..
RC2/branch only ?
Confirmed RC2 (2002051006) on Win2K.
Reporter: Try disabling pipelining and closing Moz AND Quicklaunch.
For me, the website worked with pipelining off (my default condition), and
stopped working when I activated pipelining. When I again disabled pipelining,
it appears the change didn't take effect until I closed Moz completely,
including Quicklaunch; then the site worked. In detail:
1. Pipelining off
a) Open url in new tab
b) Page appears to load as expected, completely
2. Enable Pipelining
a) highlight url field, press <enter>
b) page appears normally
c) Shift + click reload button (force reload)
d) Hangs on reload, displaying:
- Status bar | "Tranferring data from webbanking.waterhousebank.com..."
- Top 3 rows/stripes (Login... / TDWaterhouse logo / Welcome...)
- Some text and mostly (image?) placeholders below that.
e) Close tab, open in new tab again:
- Same status bar (Transferring...), blank white webpage
3. Disable Pipelining
a) Same result as 2e, above
b) Shift+click reload, no change
4. Close Moz (Quicklaunch still active), reload Moz, open page
a) Same result as 2e
5. Close Moz, unload Quicklauch, reload Moz
a) works, same as 2b
Note: When the page works, it tries to plant a cookie. When it doesn't, it
never gets to that point.
Comment 4•23 years ago
|
||
To Darin...
pipelining on the branch is _very_ experimental and should be used at one's own
risk. and yes, prefs should likely say this.
Assignee: Matti → darin
Status: UNCONFIRMED → NEW
Ever confirmed: true
Based on comments from guanxi_i@yahoo.com , I tested disabling pipelining and
rebooting on the machine from which the bug was reported. The website loads
properly once that occurs. Seems that the pipeline ability is the problem here.
| Assignee | ||
Updated•23 years ago
|
Whiteboard: [pipelining]
| Assignee | ||
Comment 7•23 years ago
|
||
*** Bug 140176 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 8•23 years ago
|
||
*** Bug 145880 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 9•23 years ago
|
||
i have a patch for this...
Status: NEW → ASSIGNED
Keywords: mozilla1.0,
nsbeta1
Priority: -- → P2
Whiteboard: [pipelining] → [pipelining][adt2 RTM]
Target Milestone: Future → mozilla1.0.1
| Assignee | ||
Comment 10•23 years ago
|
||
add code to block bad servers
Comment 11•23 years ago
|
||
Attachment #84515 -
Flags: superreview+
| Assignee | ||
Comment 12•23 years ago
|
||
*** Bug 142956 has been marked as a duplicate of this bug. ***
Attachment #84515 -
Flags: review+
Comment 13•23 years ago
|
||
Comment on attachment 84515 [details] [diff] [review]
v1 patch
r=gagan
| Assignee | ||
Comment 14•23 years ago
|
||
*** Bug 146353 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 15•23 years ago
|
||
fixed-on-trunk
Whiteboard: [pipelining][adt2 RTM] → [pipelining][adt2 RTM][fixed trunk]
Comment 16•23 years ago
|
||
Really? Looking at bonsai the only file that was checked in was
nsHttpPipeline.cpp, which only had a comment added.
| Assignee | ||
Comment 17•23 years ago
|
||
yeah, i noticed that too.. some sort of CVS/bonsai error i suppose. after
noticing the same thing, i verified that the changes were indeed made to the CVS
repository. so, no worries =)
Comment 18•23 years ago
|
||
OK, I just looked at LXR and found all the changes. Odd that bonsai doesn't
seem to remember them.
Comment 19•23 years ago
|
||
tever, could you verify this on the trunk?
Comment 20•23 years ago
|
||
pages loading fine with both pipelining on and off
verified trunk - 06/04/02 builds - winNT4, linux rh6, mac osX
Whiteboard: [pipelining][adt2 RTM][fixed trunk] → [pipelining][adt2 RTM][fixed trunk][verified trunk]
| Assignee | ||
Comment 21•23 years ago
|
||
*** Bug 148916 has been marked as a duplicate of this bug. ***
Comment 22•23 years ago
|
||
Resolving as Verified/Fixed, per comment #20 From tever@netscape.com.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 23•23 years ago
|
||
reopening, this is not fixed on the branch yet.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 24•23 years ago
|
||
Really verifying this time.
Comment 25•23 years ago
|
||
adt1.0.1+ (on ADT's behalf) approval for checkin to the 1.0 branch. pls check
this in asap, then add the "fixed1.0.1" keyword.
| Assignee | ||
Comment 26•23 years ago
|
||
marking FIXED per ADT convention (not fixed on branch yet)
Status: VERIFIED → REOPENED
Whiteboard: [pipelining][adt2 RTM][fixed trunk][verified trunk] → [pipelining][adt2 RTM]
| Assignee | ||
Comment 27•23 years ago
|
||
fixed
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Comment 29•23 years ago
|
||
please land this on the 1.0.1 branch. once there remove the "mozilla1.0.1+"
keyword, and add the "fixed1.0.1"
Keywords: mozilla1.0.1 → mozilla1.0.1+
Updated•23 years ago
|
Attachment #84515 -
Flags: approval+
| Assignee | ||
Updated•23 years ago
|
Keywords: mozilla1.0.1+ → fixed1.0.1
Comment 30•23 years ago
|
||
verified branch, 06/10/02 builds, linux rh6, win NT4, mac osX
Keywords: verified1.0.1
| Assignee | ||
Comment 31•23 years ago
|
||
*** Bug 145928 has been marked as a duplicate of this bug. ***
Comment 32•23 years ago
|
||
While the fix for this bug has dealt with a lot of the pipelining issues, it
seems there are still some out there. Refer Bug #144480 for links to remaining
problems.
Blocks: 144480
| Assignee | ||
Comment 33•23 years ago
|
||
*** Bug 148172 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•