fixes bug 144442 "Microsoft-IIS/4.x and Netscape-Enterprise/3.x do not support pipelining" r=gagan sr=rpotts